--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,12 @@
+@font-face {
+    font-family: "Bebas Neue";
+    src: local("BebasNeueRegular"), url("../fonts/BebasNeueRegular.woff2") format("woff2"),
+      url("../fonts/BebasNeueRegular.woff") format("woff");
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+  }
+  
 * {
     box-sizing: border-box;
 }
@@ -50,4 +59,60 @@ body {
     line-height: 20px;
     text-decoration: none;
     color: #fff;
+}
+.main {
+    width: 1280px;
+    margin: auto;
+    padding-top: 54px;
+    display: flex;
+}
+.home-image path {
+    opacity: 0;
+}
+.home-image path:hover{
+    opacity: 1;
+    cursor: pointer;
+}
+.main-intro {
+    flex-grow: 1;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
+.counter-group {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.counter-button {
+    background-color: #fff;
+    border: none;
+    cursor: pointer;
+}
+.couter-arrow-down {
+    transform: rotateX(180deg);
+}
+.main-title {
+    font-family: 'Bebas Neue', sans-serif;
+    font-weight: normal;
+    font-size: 37px;
+    line-height: 44px;
+    color: #635854;
+    margin: 0;
+}
+.counter {
+    color: #635854;
+    font-size: 124px;
+    font-family: 'Bebas Neue', sans-serif;
+    margin-top: 10px;
+}
+.button-primery{
+    background: #3596F5;
+    border-radius: 6px;
+    color: #fff;
+    border: none;
+    padding: 16px 36px;
+    cursor: pointer;
 }
